adding coupon section and subscribers fields and also front end of user account information

--- a/templates/base.html
+++ b/templates/base.html
@@ -108,6 +108,28 @@
                 </a>
             </li>
 
+            <li class="menu-item">
+                <a href="" aria-disabled="true" class="menu-link">
+                    <span class="menu-label">
+                        <span class="menu-name">Coupons</span>
+                    </span>
+                    <span class="menu-icon">
+                        <i class="icon-placeholder mdi mdi-shape-outline "></i>
+                    </span>
+                </a>
+            </li>
+
+            <li class="menu-item">
+                <a href="" aria-disabled="true" class="menu-link">
+                    <span class="menu-label">
+                        <span class="menu-name">Subscriptions</span>
+                    </span>
+                    <span class="menu-icon">
+                        <i class="icon-placeholder mdi mdi-shape-outline "></i>
+                    </span>
+                </a>
+            </li>
+
             <li class="menu-item ">
                 <a href="#" class="menu-link">
                     <span class="menu-label">
