--- a/templates/user_Account.html
+++ b/templates/user_Account.html
@@ -467,15 +467,15 @@
                                                         </p>
                                                         <p>
                                                             <span>Email: </span>
-                                                            {{userdetails.email}
+                                                            {{userdetails.email}}
                                                         </p>
                                                         <p>
                                                             <span>Phone: </span>
-                                                            {{userdetails.phone}
+                                                            {{userdetails.phone_number}}
                                                         </p>
                                                         <p>
                                                             <span>Country: </span>
-                                                            {{userdetails.country}
+                                                            {{userdetails.country}}
                                                         </p>
                                                         <p>
                                                             <span>Postcode: </span>
